# pose-format-snippets

./: .gitignore  README.md  pyproject.toml
examples/: add_z_offsets.py  download_poses.py
pose_format_snippets/gdrive/: gdrive_utils.py
pose_format_snippets/utils/: pose_files.py
